fixed gallery mobile overflow bug

--- a/assets/js/GalleryApp/css/GalleryFileList.css
+++ b/assets/js/GalleryApp/css/GalleryFileList.css
@@ -78,5 +78,4 @@ figure {
     align-items: center;
     text-align: center;
     align-content: center;
-    transition: all 0.4s;
 }
